...
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/company_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imeiTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
...
                android:textDirection="locale"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/check_imei_status_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/imei_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boxed_edittext_bg"
                    android:gravity="start|center_vertical"
                    android:hint="@string/enter_imei"
                    android:inputType="textFilter"
...
                    android:textDirection="locale"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--<ImageButton-->
                <!--android:id="@+id/scannerBtn"-->
                <!--style="?android:buttonBarButtonStyle"-->
                <!--android:layout_width="60dp"-->
                <!--android:layout_height="45dp"-->
                <!--android:contentDescription="@string/open_scanner"-->
                <!--android:scaleType="centerInside"-->
                <!--android:src="@drawable/ic_barcode"-->
                <!--app:layout_constraintEnd_toEndOf="@+id/imeiTil"-->
                <!--app:layout_constraintTop_toTopOf="@+id/imeiTil"-->
                <!--app:layout_constraintBottom_toBottomOf="@id/imeiTil"/>-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginRight="8dp"
...
