...
    <string name="title_activity_main_result">MainResultActivity</string>
    <string name="seen_with">Subscribers Seen With IMEI</string>
    <string name="paired_imsis">Paired Subscribers</string>
    <string name="no_record">No record found</string>
    <string name="login">Login</string>
    <string name="verify_imei">Verify IMEI</string>
    <string name="length_error">IMEI must be 14 to 16 characters long</string>
    <string name="hexa_error">IMEI must contain A–F, a–f and 0–9 only</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="profile">Profile</string>

    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
...
