...
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/imei_txt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="123456789012345"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textAlignment="center"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:background="@color/colorCellValue"
...
